<resources>
    <string name="app_name" translatable="false">Air Care App</string>
    <string name="default_web_client_id" translatable="false">51223982832-seeiftpb3dabo614mceelsv8h4imp2nr.apps.googleusercontent.com</string>

    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="loginGg">Continue with GOOGLE</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember">Remember</string>
    <string name="forgetpw">Forget Password</string>
    <string name="create_account">Don\'t have an account?</string>
    <string name="create">CREATE</string>
    <string name="email_sample">username@gmail.com</string>
    <string name="password_sample">*********</string>
    <string name="send">Send Code</string>
    <string name="titleSetting">Setting and Privacy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="common">Common</string>
    <string name="language">Language</string>
    <string name="mode">Dark Mode</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="help">Need a help?</string>
    <string name="notification">Notification</string>

    <string name="change_avatar">Change Avatar</string>
    <string name="updatepw">Update Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="updateProfile">Update Profile</string>


    <string name="aqi" translatable="false">AQI</string>
    <string name="aqiPredict">AQI Predict</string>
    <string name="update">Update</string>

    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmnewpassword">Confirm New Password</string>

    <!--    Title bottom home-->
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>

    <!--    Title bottom statistic-->
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="pm10" translatable="false">PM10</string>
    <string name="pm25" translatable="false">PM25</string>
    <string name="pressure">Pressure</string>
    <string name="co2" translatable="false">C02</string>
    <string name="sunrise" translatable="false">06:09</string>
    <string name="sunset" translatable="false">17:39</string>
    <string name="tempMax" >Temp Max</string>
    <string name="tempMin" >Temp Min</string>
    <string name="feelsLike" >Feels Like</string>
    <string name="speed" >Speed</string>
    <string name="cloud" >Clouds</string>
    <string name="Hello">Hi,</string>

    <string name="time">Time (day)</string>
    <string name="titleTemp">Temperatures (°C)</string>
    <string name="titleHumidity">Humidity (%)</string>
    <string name="titleWind">Wind (m/s)</string>
    <string name="titlePM10" translatable="false">PM10 (µg/m³)</string>
    <string name="titlePM25" translatable="false">PM25 (µg/m³)</string>

    <string name="titleDetail">Asset Details</string>
    <string name="titleOr">Or</string>

    <!--    Notification-->
    <string name="loginSuccess">Login Success</string>
    <string name="loginFailed">Login Failed</string>
    <string name="logoutSuccess">Logout Success</string>
    <string name="logoutFailed">Logout Failed</string>
    <string name="singupSuccess">Signup Success</string>
    <string name="signupFailed">Signup Failed</string>

    <string name="emptyEmail">Email cannot be empty</string>
    <string name="invalidEmail">Email is invalid</string>
    <string name="emptyUsername">Username cannot be empty</string>
    <string name="emptyPass">Password cannot be empty</string>
    <string name="emptyNewPass">New password cannot be empty</string>

    <string name="invalidPass">Enter minimum 6 characters</string>
    <string name="strongPass">Strong Password</string>
    <string name="weakPass">Weak Password. Include minimum 1 special char</string>
    <string name="notiConfirmPass">Confirm your password</string>
    <string name="notiRequiredPass">Password confirmation is required</string>
    <string name="notiCorrectPass">Please re-enter the correct password</string>
    <string name="notiIncorrectPass">Password confirmation is incorrect</string>
    <string name="notiOldPass">Please re-enter correct your old password</string>
    <string name="notiIncorrectOldPass">Old password is incorrect</string>

    <string name="notiTitleUpdatePass">Update Password</string>
    <string name="notiWait">Please wait...</string>

    <string name="notiUpdatePassSuccess">Updated password successfully</string>
    <string name="notiUpdatePassFailed">Password update failed</string>


    <string name="titleSlide1">Welcome to explore the \nmysteries within \nevery breath</string>
    <string name="titleSlide1_land">Welcome to explore the mysteries within every breath</string>
    <string name="titleSlide2">Explore global air quality \nand discover forecasts for cities worldwide</string>
    <string name="titleSlide3">Manage your well-being \nwith daily air quality notifications</string>


    <string name="titleSunrise">Sunrise</string>
    <string name="titleSunset">Sunset</string>

    <string name="day">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday"> Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="clearSky">Clear sky</string>
    <string name="fewClouds">Few clouds</string>
    <string name="scatteredClouds">Scattered clouds</string>
    <string name="brokenClouds">Broken clouds</string>
    <string name="showerRain">Shower rain</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="snow">Snow</string>
    <string name="mist">Mist</string>
    <string name="scriptWeather">Mostly sunny</string>

    <string name="manufacturer">Manufacturer</string>
    <string name="place">Place</string>
    <string name="titleRainfall">Rainfall (mm)</string>
    <string name="windDirection">Wind direction</string>
    <string name="titleWindSpeed">Wind Speed (km/h)</string>
    <string name="view">VIEW</string>

    <string name="id" translatable="false">ID</string>
    <string name="version">Version</string>
    <string name="type">Type</string>
    <string name="createdOn">Created On</string>

    <string name="idAssetUser">Id Asset User</string>
    <string name="fullName">Full Name</string>
    <string name="assetName">Asset Name</string>
    <string name="parentAssetName">Parent Asset Name</string>

    <string name="brightness" translatable="false">Brightness (%)</string>
    <string name="colourRGB" translatable="false">Colour RGB</string>
    <string name="colourTemperature" translatable="false">Colour temperature (K)</string>
</resources>