<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/action_map"
        android:title="@string/map"
        android:icon="@drawable/ic_map"/>

    <item
        android:id="@+id/action_statistic"
        android:title="@string/history"
        android:icon="@drawable/ic_signal_cellular_alt"/>

    <item
        android:id="@+id/action_setting"
        android:title="@string/settings"
        android:icon="@drawable/ic_setting"/>

<!--    <item-->
<!--        android:id="@+id/action_profile"-->
<!--        android:title="Profile"-->
<!--        android:icon="@drawable/settings_icon"/>-->
</menu>