<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/slashscreen"
    tools:context=".View.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/logo_white"
        android:layout_marginTop="25dp" />

    <LinearLayout
        android:id="@+id/formLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_view"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="30dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/green_bg"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="40sp"
            android:textColor="@color/bg_green"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginUsernameInput"
            android:paddingTop="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                android:background="@color/light_white"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            app:boxBackgroundMode="outline"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_white"
                android:fontFamily="sans-serif"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkBoxRemember"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/remember"
                android:textColor="@color/black" />

            <!--        <CheckBox-->
            <!--            android:id="@+id/checkBoxRemember"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginStart="32dp"-->
            <!--            android:text="Remember"-->
            <!--            app:layout_constraintStart_toStartOf="parent" />-->

            <Button
                android:id="@+id/buttonForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="#00000000"
                android:text="@string/forgetpw"
                android:textColor="@color/bg_green"
                android:textStyle="bold"
                android:gravity="end|center_vertical" />

        </RelativeLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/bg_green"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Or"
            android:textSize="30sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/buttonLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/bg_green"
            android:text="@string/loginGg"
            android:textColor="@color/white"
            android:textSize="20sp" />

<!--        <Button-->
<!--            android:id="@+id/registerRedirectText"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:background="#00000000"-->
<!--            android:text="@string/create_account"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="16sp"-->
<!--            android:layout_below="@+id/text_login"/>-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonLoginGoogle"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/tvCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/registerRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:text="@string/create"
                android:textColor="@color/bg_green"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>