<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/slashscreen"
    tools:context=".View.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/logo_white"
        android:layout_marginTop="25dp" />

    <LinearLayout
        android:id="@+id/font"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/bg_view"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/imageViewBackLogin"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_arrow_left" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/green_bg" />

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/register"
            android:textColor="@color/bg_green"
            android:textSize="40sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerEmailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:paddingTop="30dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_white"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_white"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerConfirmPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="Confirm password"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_white"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/bg_green"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>